# GreenhouseBBB

./: README.md  Server.js  compile.sh  index.html  init  run.sh  style.css
greenhouse/: CMakeLists.txt  I2CDevice.cpp  I2CDevice.h  compile.sh  io  main.cpp  settings.h
greenhouse/DoxyGen/html/: _i2_c_device_8h_source.html  annotated.html  classes.html  classexploring_b_b_1_1_i2_c_device-members.html  classexploring_b_b_1_1_i2_c_device.html  classgreenhouse_1_1hih8120-members.html  classgreenhouse_1_1hih8120.html  classgreenhouse_1_1ldr-members.html  classgreenhouse_1_1ldr.html  classgreenhouse_1_1pwm-members.html  classgreenhouse_1_1pwm.html  classheater-members.html  classheater.html  dir_33c42029b4160b563348d16242dcc8c5.html  dir_3a8feefd1cb361d121d387a3d880dbce.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_c840fe33e41efafd09f6df2823d380b3.html  dir_d538b08c7fb772aaa898cf7e887e4d2c.html  dir_d93d2cf4e6ebc4e521d9036ed7390470.html  dir_e3f9c3e59c8e9afcfeb637b8c6f7e61d.html  dir_e4db62497e01360de151742c4c9ede63.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_func.html  index.html  (+8 more)
greenhouse/heater/: heater.cpp  heater.h  heaterAdapter.cpp  heaterAdapter.h
greenhouse/hih8120/: hih8120.cpp  hih8120.h  temperatureHumidityAdapter.cpp  temperatureHumidityAdapter.h
greenhouse/ldr/: ldr.cpp  ldr.h  ldrAdapter.cpp  ldrAdapter.h
greenhouse/pmw/: lightAdapter.cpp  lightAdapter.h  pwm.cpp  pwm.h  servoAdapter.cpp  servoAdapter.h
greenhouse/pwm/: lightAdapter.cpp  lightAdapter.h  pwm.cpp  pwm.h  servoAdapter.cpp  servoAdapter.h
(+39 files in other folders)
